manifests/agri-dashboard/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agri-dashboard

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-dashboard
  namespace: agri-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-dashboard
  template:
    metadata:
      labels:
        app: agri-dashboard
    spec:
      containers:
        - name: agri-dashboard
          image: ghcr.io/agrisensenet/agri-dashboard@sha256:74662d4a4990a55365e03f0ff4efaf84ce76d6f0f44fb7e8e233dfb5df0e77b6
          ports:
            - name: http
              containerPort: 80
            - name: metrics
              containerPort: 9113
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: agri-dashboard
  namespace: agri-dashboard
  labels:
    app.kubernetes.io/name: agri-dashboard
spec:
  selector:
    app: agri-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
